# mail-agentpy

./: .gitignore  README.md  fakemail.txt  pyproject.toml  requirements.txt
src/: app.py  gmail.py  structure.py
