[project]
name = "agentpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.3",
    "google-genai>=1.50.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]
